[package]
name = "langtons_ant"
version = "0.1.0"
edition = "2021"
authors = ["Yo Matsumoto <youmts22@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
clap = { version = "4.1.8", features = ["derive"] }

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf"]
